--- a/templates/uni2win.html
+++ b/templates/uni2win.html
@@ -105,7 +105,7 @@
 					<ul class="right hide-on-med-and-down">
 					
 					<li><a href="/" >Home</a></li>
-					<li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>	
+					<li><a class="dropdown-trigger" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>	
 					</ul>
 		
 			</div>
