--- a/templates/win2uni.html
+++ b/templates/win2uni.html
@@ -106,7 +106,7 @@
 					<li><a href="/" >
 						Home</a>
                     </li>
-                  <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>	
+                  <li><a class="dropdown-trigger" data-target="dropdown1">Dropdown<i class="material-icons right">arrow_drop_down</i></a></li>	
 					</ul>
 		
 			</div>
